--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 NODE_ENV='development'
 PORT=2000
-MONGO_URI=mongodb+srv://eng-saed:saed000222@cluster0.gxvf1.mongodb.net/mgmt_db?retryWrites=true&w=majority
+MONGO_URI=''
